# library_management

./: .gitignore  Dockerfile  compose.yml  entrypoint.sh  pyproject.toml
library_management/: app.py  database.py  security.py  settings.py
library_management/depends/: books_dependencies.py  database_dependencies.py  users_dependencies.py
library_management/models/: db_models.py
library_management/routers/: auth.py  books.py  loans.py  users.py
library_management/schemas/: books_schemas.py  core_schemas.py  loans_schemas.py  users_schemas.py
library_management/services/: loans_service.py  users_services.py
migrations/: env.py
migrations/versions/: 2a1c1f11c5d4_relationships_without_dont_is_include_.py  386b7f60d082_add_loans_table.py  466fb625373d_first_migration.py  ad70193ccc6f_create_tables_books_and_authors.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py
tests/test_books/: test_create_book.py  test_get_books.py
tests/test_loans/: test_create_loans.py  test_get_loans.py  test_return_loan.py
tests/test_services/: test_loan_service.py
tests/test_users/: test_create_user.py  test_delete_users.py  test_get_users.py  test_update_users.py
