[project]
name = "library-management"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel-Marquess",email = "mluiz4784@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.18,<0.16.0)",
    "typos (>=1.47.2,<2.0.0)"
]

[tool.ruff]
line-length = 88
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

	

[tool.pytest]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=library_management', '--cov-context=test']

[tool.typos.files]
extend-exclude = ["*.md"] 

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev library_management/app.py'
test = 'pytest -s -x -vv'

