[project]
name = "library_management"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel-Marquess",email = "mluiz4784@gmail.com"}
]
requires-python = ">=3.14, <4.0"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "tzdata (>=2026.2,<2027.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.18,<0.16.0)",
    "typos (>=1.47.2,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "debugpy (>=1.8.21,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[tool.ruff]
line-length = 88
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLW0108', 'PLR0913', 'PLR0917']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest]
pythonpath = ['.']
addopts = ['-p', 'no:warnings', '--cov=library_management', '--cov-context=test']

[tool.typos.files]
extend-exclude = ["*.md"] 

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev library_management/app.py'
test = 'pytest -s -x -vv --cov=library_management --cov-report=term-missing --cov-report=html:coverage_html'
covarage = 'xdg-open coverage_html/index.html'
debug = 'poetry run python -m debugpy --listen 0.0.0.0:5678 -m uvicorn library_management.app:app     --host 0.0.0.0 --port 8000 --reload'

[tool.covarage.run]
concurrency = ['thread', 'greenlet']
